--- a/website.html
+++ b/website.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>因陀羅華基金會 - 護持佛法於AI時代</title>
+    <title>因陀羅華基金會 -- 護持佛法於AI時代</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         * {
