change the color scheme and background

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             font-family: 'Noto Serif TC', 'Microsoft YaHei', serif;
             line-height: 1.8;
             color: #2D3748;
-            background: linear-gradient(135deg, #FDFBF8 0%, #F7F5F0 100%);
-            background-attachment: fixed;
+            background: #FFFFFF;
         }
 
         .container {
@@ -34,8 +33,8 @@
             left: 0;
             right: 0;
             z-index: 100;
-            box-shadow: 0 2px 30px rgba(217, 119, 6, 0.1);
-            border-bottom: 1px solid rgba(217, 119, 6, 0.1);
+            box-shadow: 0 2px 30px rgba(153, 27, 27, 0.1);
+            border-bottom: 1px solid rgba(153, 27, 27, 0.1);
         }
 
         nav {
@@ -62,7 +61,7 @@
         .logo-text {
             font-size: 1.6rem;
             font-weight: 700;
-            color: #B7791F;
+            color: #991B1B;
             letter-spacing: 0.5px;
             position: relative;
         }
@@ -74,7 +73,7 @@
             left: 0;
             width: 0;
             height: 2px;
-            background: linear-gradient(90deg, #D97706, #F59E0B);
+            background: linear-gradient(90deg, #991B1B, #DC2626);
             transition: width 0.3s ease;
         }
 
@@ -108,13 +107,13 @@
             left: 50%;
             width: 0;
             height: 2px;
-            background: linear-gradient(90deg, #D97706, #F59E0B);
+            background: linear-gradient(90deg, #991B1B, #DC2626);
             transition: all 0.3s ease;
             transform: translateX(-50%);
         }
 
         .nav-links a:hover {
-            color: #B7791F;
+            color: #991B1B;
         }
 
         .nav-links a:hover::after {
@@ -133,7 +132,7 @@
         }
 
         .hero {
-            background: linear-gradient(135deg, #FDFBF8 0%, #F8F6F0 50%, #F5F1E8 100%);
+            background: linear-gradient(135deg, #FDFBF8 0%, #F9F7F4 50%, #F5F3F0 100%);
             text-align: center;
             position: relative;
             overflow: hidden;
@@ -146,7 +145,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><defs><pattern id="lotus" x="0" y="0" width="120" height="120" patternUnits="userSpaceOnUse"><g transform="translate(60,60)"><path d="M0,-20 Q-10,-10 -15,0 Q-10,10 0,20 Q10,10 15,0 Q10,-10 0,-20Z" fill="%23D97706" opacity="0.08"/><circle cx="0" cy="0" r="2" fill="%23B7791F" opacity="0.3"/></g></pattern></defs><rect width="100%" height="100%" fill="url(%23lotus)"/></svg>') center/cover;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><defs><pattern id="lotus" x="0" y="0" width="120" height="120" patternUnits="userSpaceOnUse"><g transform="translate(60,60)"><path d="M0,-20 Q-10,-10 -15,0 Q-10,10 0,20 Q10,10 15,0 Q10,-10 0,-20Z" fill="%23991B1B" opacity="0.08"/><circle cx="0" cy="0" r="2" fill="%23DC2626" opacity="0.3"/></g></pattern></defs><rect width="100%" height="100%" fill="url(%23lotus)"/></svg>') center/cover;
             opacity: 0.6;
         }
 
@@ -157,7 +156,7 @@
             left: 10%;
             width: 80px;
             height: 80px;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text x="50" y="55" text-anchor="middle" font-size="60" fill="%23D97706" opacity="0.1">卍</text></svg>');
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text x="50" y="55" text-anchor="middle" font-size="60" fill="%23991B1B" opacity="0.1">卍</text></svg>');
             animation: float 6s ease-in-out infinite;
         }
 
@@ -169,13 +168,13 @@
         .hero h1 {
             font-size: 3.2rem;
             margin-bottom: 1.5rem;
-            background: linear-gradient(135deg, #B7791F, #D97706, #F59E0B);
+            background: linear-gradient(135deg, #991B1B, #DC2626, #EF4444);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             font-weight: 300;
             letter-spacing: 1px;
-            text-shadow: 0 4px 8px rgba(217, 119, 6, 0.1);
+            text-shadow: 0 4px 8px rgba(153, 27, 27, 0.1);
         }
 
         .hero p {
@@ -229,28 +228,28 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #D97706, #F59E0B);
+            background: linear-gradient(135deg, #991B1B, #DC2626);
             color: white;
-            box-shadow: 0 4px 15px rgba(217, 119, 6, 0.3);
+            box-shadow: 0 4px 15px rgba(153, 27, 27, 0.3);
         }
 
         .btn-primary:hover {
             transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(217, 119, 6, 0.4);
+            box-shadow: 0 8px 25px rgba(153, 27, 27, 0.4);
         }
 
         .btn-secondary {
             background: transparent;
-            color: #D97706;
-            border: 2px solid #D97706;
-            box-shadow: 0 4px 15px rgba(217, 119, 6, 0.1);
+            color: #991B1B;
+            border: 2px solid #991B1B;
+            box-shadow: 0 4px 15px rgba(153, 27, 27, 0.1);
         }
 
         .btn-secondary:hover {
-            background: linear-gradient(135deg, #D97706, #F59E0B);
+            background: linear-gradient(135deg, #991B1B, #DC2626);
             color: white;
             transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(217, 119, 6, 0.3);
+            box-shadow: 0 8px 25px rgba(153, 27, 27, 0.3);
         }
 
         .section-title {
@@ -271,7 +270,7 @@
             transform: translateX(-50%);
             width: 60px;
             height: 3px;
-            background: linear-gradient(90deg, #D97706, #F59E0B);
+            background: linear-gradient(90deg, #991B1B, #DC2626);
             border-radius: 2px;
         }
 
@@ -298,7 +297,7 @@
             border-radius: 20px;
             box-shadow: 0 8px 30px rgba(0,0,0,0.08);
             transition: all 0.4s ease;
-            border: 1px solid rgba(217, 119, 6, 0.1);
+            border: 1px solid rgba(153, 27, 27, 0.1);
             backdrop-filter: blur(10px);
             position: relative;
             overflow: hidden;
@@ -311,14 +310,14 @@
             left: 0;
             right: 0;
             height: 4px;
-            background: linear-gradient(90deg, #D97706, #F59E0B);
+            background: linear-gradient(90deg, #991B1B, #DC2626);
             opacity: 0;
             transition: opacity 0.3s ease;
         }
 
         .card:hover {
             transform: translateY(-8px);
-            box-shadow: 0 15px 40px rgba(217, 119, 6, 0.15);
+            box-shadow: 0 15px 40px rgba(153, 27, 27, 0.15);
         }
 
         .card:hover::before {
@@ -345,12 +344,12 @@
 
         .card-icon svg {
             transition: all 0.3s ease;
-            filter: drop-shadow(0 2px 8px rgba(217, 119, 6, 0.2));
+            filter: drop-shadow(0 2px 8px rgba(153, 27, 27, 0.2));
         }
 
         .card:hover .card-icon svg {
             transform: scale(1.1);
-            filter: drop-shadow(0 4px 12px rgba(217, 119, 6, 0.3));
+            filter: drop-shadow(0 4px 12px rgba(153, 27, 27, 0.3));
         }
 
         .card h3 {
@@ -369,7 +368,7 @@
             transform: translateY(-50%);
             width: 4px;
             height: 20px;
-            background: linear-gradient(180deg, #D97706, #F59E0B);
+            background: linear-gradient(180deg, #991B1B, #DC2626);
             border-radius: 2px;
             opacity: 0;
             transition: opacity 0.3s ease;
@@ -406,7 +405,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, #D97706, #F59E0B);
+            background: linear-gradient(135deg, #991B1B, #DC2626);
             opacity: 0;
             border-radius: 25px;
             transition: opacity 0.3s ease;
@@ -423,7 +422,7 @@
         }
 
         .tab:hover {
-            color: #D97706;
+            color: #991B1B;
         }
 
         .tab-content {
@@ -447,11 +446,11 @@
             background: rgba(255, 255, 255, 0.95);
             padding: 2rem;
             border-radius: 15px;
-            box-shadow: 0 6px 20px rgba(217, 119, 6, 0.1);
+            box-shadow: 0 6px 20px rgba(153, 27, 27, 0.1);
             text-align: center;
             min-width: 220px;
             transition: all 0.3s ease;
-            border: 1px solid rgba(217, 119, 6, 0.15);
+            border: 1px solid rgba(153, 27, 27, 0.15);
             position: relative;
         }
 
@@ -462,18 +461,18 @@
             left: 50%;
             transform: translateX(-50%);
             font-size: 1.2rem;
-            color: #D97706;
+            color: #991B1B;
         }
 
         .flow-item:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(217, 119, 6, 0.2);
+            box-shadow: 0 10px 30px rgba(153, 27, 27, 0.2);
         }
 
         .flow-arrow {
             font-size: 2.5rem;
-            color: #D97706;
-            text-shadow: 0 2px 4px rgba(217, 119, 6, 0.2);
+            color: #991B1B;
+            text-shadow: 0 2px 4px rgba(153, 27, 27, 0.2);
             animation: float 2s ease-in-out infinite;
         }
 
@@ -492,7 +491,7 @@
             align-items: center;
             justify-content: center;
             font-size: 3rem;
-            color: #D97706;
+            color: #991B1B;
         }
 
         .stats {
@@ -504,7 +503,7 @@
 
         .stat-item h3 {
             font-size: 2.5rem;
-            color: #D97706;
+            color: #991B1B;
             margin-bottom: 0.5rem;
         }
 
@@ -523,7 +522,7 @@
             left: 0;
             right: 0;
             height: 1px;
-            background: linear-gradient(90deg, transparent, #D97706, transparent);
+            background: linear-gradient(90deg, transparent, #991B1B, transparent);
         }
 
         @media (max-width: 768px) {
