change the title and the hero page text

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>利用AI與佛法的力量
-讓眾生不再漂泊　</title>
+    <title>因陀羅華佛語典藏協會 AI時代的佛典計畫　</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -487,7 +486,7 @@
         <section id="home" class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1>護持古老智慧於AI新時代</h1>
+                    <h1>乘著AI的風 讓正法弘揚</h1>
                     <p>在人工智慧蓬勃發展的時代，我們致力於建構可信賴的佛學知識庫，讓佛法智慧能夠正確傳承並普及於世界各地，同時確保AI技術能夠準確理解和傳達佛教教義。</p>
                     <div class="cta-buttons">
                         <a href="#projects" class="btn btn-primary">瞭解計劃項目</a>
