change the text for welcome to join us

--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@
         <section id="involvement">
             <div class="container">
                 <h2 class="section-title">護持參與</h2>
-                <p class="section-subtitle">誠邀各界法友共同參與這項護持佛法的偉大事業</p>
+                <p class="section-subtitle">誠邀所有關心佛教未來的朋友們，一同與我們共同將佛法帶給未來的世代</p>
 
                 <div class="tabs">
                     <button class="tab active" onclick="showTab('collaborate')">專業協作</button>
