--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         }
 
         .logo:hover .logo-image {
-            transform: scale(1.08) translateY(-2px);
-            filter: brightness(1.15) saturate(1.1) drop-shadow(0 6px 16px rgba(59, 130, 246, 0.3));
+            transform: scale(1.05);
+            opacity: 0.8;
         }
 
         .logo {
@@ -68,20 +68,7 @@
             overflow: hidden;
         }
 
-        .logo::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
-            transition: left 0.6s ease;
-        }
 
-        .logo:hover::before {
-            left: 100%;
-        }
 
         .nav-links {
             display: flex;
@@ -195,9 +182,9 @@
         }
 
         .btn-primary:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(0, 84, 188, 0.4);
-            background: linear-gradient(135deg, #0066E6, #0054BC);
+            transform: translateY(-2px);
+            background: #003875;
+            box-shadow: 0 4px 12px rgba(0, 84, 188, 0.2);
         }
 
         .btn-secondary {
@@ -208,10 +195,10 @@
         }
 
         .btn-secondary:hover {
-            background: linear-gradient(135deg, #0054BC, #0066E6);
+            background: #0054BC;
             color: white;
-            transform: translateY(-3px);
-            box-shadow: 0 8px 25px rgba(0, 84, 188, 0.3);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(0, 84, 188, 0.2);
         }
 
         .section-title {
@@ -267,25 +254,12 @@
 
 
         .card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 15px 40px rgba(0, 84, 188, 0.15);
-            border-color: rgba(0, 84, 188, 0.2);
+            transform: translateY(-5px);
+            border-color: #0054BC;
+            background: linear-gradient(145deg, #F8FAFC 0%, #FFFFFF 100%);
         }
 
-        .card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(0, 84, 188, 0.05), transparent);
-            transition: left 0.6s ease;
-        }
 
-        .card:hover::before {
-            left: 100%;
-        }
 
 
 
@@ -402,8 +376,9 @@
 
 
         .flow-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0, 84, 188, 0.2);
+            transform: translateY(-3px);
+            border-color: #0054BC;
+            background: rgba(255, 255, 255, 1);
         }
 
         .flow-arrow {
@@ -493,8 +468,9 @@
         }
         
         .workflow-box:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0, 84, 188, 0.2);
+            transform: translateY(-3px);
+            border-color: #0054BC;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 1) 0%, rgba(248, 250, 252, 1) 100%);
         }
         
         .workflow-box-title {
