--- a/index.html
+++ b/index.html
@@ -277,12 +277,11 @@
 
         .card-icon svg {
             transition: all 0.3s ease;
-            filter: drop-shadow(0 2px 8px rgba(0, 84, 188, 0.2));
         }
 
         .card:hover .card-icon svg {
-            transform: scale(1.1);
-            filter: drop-shadow(0 4px 12px rgba(0, 84, 188, 0.3));
+            transform: scale(1.05);
+            opacity: 0.8;
         }
 
         .card h3 {
@@ -633,8 +632,8 @@
                             <svg width="60" height="60" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                                 <defs>
                                     <linearGradient id="warningGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                        <stop offset="0%" style="stop-color:#D97706;stop-opacity:0.8" />
-                                        <stop offset="100%" style="stop-color:#F59E0B;stop-opacity:0.6" />
+                                        <stop offset="0%" style="stop-color:#0054BC;stop-opacity:0.8" />
+                                        <stop offset="100%" style="stop-color:#0066E6;stop-opacity:0.6" />
                                     </linearGradient>
                                 </defs>
                                 <!-- 三角形警告框 -->
@@ -656,9 +655,9 @@
                             <svg width="60" height="60" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                                 <defs>
                                     <linearGradient id="solutionGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                        <stop offset="0%" style="stop-color:#D97706;stop-opacity:0.8" />
-                                        <stop offset="50%" style="stop-color:#F59E0B;stop-opacity:0.6" />
-                                        <stop offset="100%" style="stop-color:#FBB042;stop-opacity:0.4" />
+                                        <stop offset="0%" style="stop-color:#0054BC;stop-opacity:0.8" />
+                                        <stop offset="50%" style="stop-color:#0066E6;stop-opacity:0.6" />
+                                        <stop offset="100%" style="stop-color:#4A90E2;stop-opacity:0.4" />
                                     </linearGradient>
                                 </defs>
                                 <!-- 燈泡外框 -->
@@ -690,9 +689,9 @@
                             <svg width="60" height="60" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                                 <defs>
                                     <linearGradient id="certGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-                                        <stop offset="0%" style="stop-color:#D97706;stop-opacity:0.9" />
-                                        <stop offset="50%" style="stop-color:#F59E0B;stop-opacity:0.7" />
-                                        <stop offset="100%" style="stop-color:#FBB042;stop-opacity:0.5" />
+                                        <stop offset="0%" style="stop-color:#0054BC;stop-opacity:0.9" />
+                                        <stop offset="50%" style="stop-color:#0066E6;stop-opacity:0.7" />
+                                        <stop offset="100%" style="stop-color:#4A90E2;stop-opacity:0.5" />
                                     </linearGradient>
                                     <!-- 水彩效果濾鏡 -->
                                     <filter id="watercolor" x="-20%" y="-20%" width="140%" height="140%">
