edit text 在資訊爆炸的時代 and 當越來越多人更習慣向AI探問生命的解答時

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
         <section id="mission">
             <div class="container">
                 <h2 class="section-title">我們的使命</h2>
-                <p class="section-subtitle">在資訊爆炸的時代，佛法傳承面臨前所未有的挑戰與機遇</p>
+                <p class="section-subtitle">在資訊爆炸的時代，佛法傳承面臨前所未有的挑戰，但也充滿了各種可能性。</p>
                 
                 <div class="grid">
                     <div class="card">
@@ -632,7 +632,7 @@
                             </svg>
                         </div>
                         <h3>當前挑戰</h3>
-                        <p>網路上的佛學資訊品質參差不齊，AI訓練時可能學習到錯誤或偏頗的佛法詮釋，導致佛法傳承出現偏差。缺乏系統性的佛學知識整理，使得珍貴的佛法智慧難以有效傳播。</p>
+                        <p>當越來越多人更習慣向AI探問生命的解答時，如果AI的訓練語料大多來自網路上錯誤的佛法資訊或偏頗的佛法詮釋，將使珍貴的佛法智慧難以正確地傳承下去。</p>
                     </div>
                     
                     <div class="card">
