change the hero video to completely white background

--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
                     </div>
                     <div class="hero-video">
                         <video autoplay muted loop playsinline>
-                            <source src="assets/flyingcrane with white background.mp4" type="video/mp4">
+                            <source src="assets/crane with complete white background.mp4" type="video/mp4">
                             您的瀏覽器不支援影片播放。
                         </video>
                     </div>
