remove the border of the video

--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
         .hero-video video {
             width: 100%;
             height: auto;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            border-radius: 0;
+            box-shadow: none;
+            border: none;
         }
 
         .hero h1 {
