--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         .hero {
             background: #FFFFFF;
             position: relative;
+            padding-top: 0;
         }
 
         .hero-container {
