remove the spacing the hero section

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             background: #FFFFFF;
             position: relative;
             padding-top: 0;
+            padding: 0 0 4rem 0;
         }
 
         .hero-container {
