來源審核機制 text

--- a/index.html
+++ b/index.html
@@ -620,8 +620,8 @@
                                       stroke="url(#certGradient)" stroke-width="1.5" stroke-linecap="round" opacity="0.7"/>
                             </svg>
                         </div>
-                        <h3>認證機制</h3>
-                        <p>我們的核心使命是建立「認證」機制——每一項佛學內容都經過資深法友、學者和專家的嚴格審核，確保其準確性和權威性，為AI時代的佛法傳承奠定堅實基礎。</p>
+                        <h3>來源審核機制</h3>
+                        <p>我們的核心使命是建立「來源審核」機制——透過不同的工具平台，邀請各傳承的高僧大德資深學者與專家，協助審核每一項佛學內容，確保其準確性和權威性，為AI時代的佛法傳承奠定堅實基礎。</p>
                     </div>
                 </div>
             </div>
@@ -635,7 +635,7 @@
                 
                 <div class="project-flow">
                     <div class="flow-item">
-                        <h3>開放佛學知識計劃</h3>
+                        <h3>開源佛學資料庫</h3>
                         <p>建立認證佛學知識庫</p>
                     </div>
                     <div class="flow-item">
@@ -656,7 +656,7 @@
 
                 <div id="knowledge" class="tab-content active">
                     <div class="card">
-                        <h3>開放佛學知識計劃</h3>
+                        <h3>開源佛學資料庫</h3>
                         <h4>建立新時代的《大藏經》數位典藏</h4>
                         <p><strong>解決的問題：</strong>佛學資訊散落各處，缺乏統一的高品質知識庫</p>
                         <p><strong>我們的解決方案：</strong>建立經過嚴格認證的開放式佛學知識庫，包含經典原文、現代註解、多語言翻譯和相關研究資料</p>
