--- a/index.html
+++ b/index.html
@@ -627,10 +627,10 @@
             </div>
         </section>
 
-        <!-- 計劃項目 -->
+        <!-- 計畫項目 -->
         <section id="projects">
             <div class="container">
-                <h2 class="section-title">計劃項目</h2>
+                <h2 class="section-title">計畫項目</h2>
                 <p class="section-subtitle">三大整合性項目，共同構建完整的佛法數位生態系統</p>
                 
 
