change 知識庫建設 to 佛學知識庫

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                 
 
                 <div class="tabs">
-                    <button class="tab active" onclick="showTab('knowledge')">知識庫建設</button>
+                    <button class="tab active" onclick="showTab('knowledge')">佛學知識庫</button>
                     <button class="tab" onclick="showTab('study')">研讀平台</button>
                     <button class="tab" onclick="showTab('practice')">修學應用</button>
                 </div>
