<h3>易於查找的線上佛學知識庫</h3>

--- a/index.html
+++ b/index.html
@@ -642,6 +642,7 @@
 
                 <div id="knowledge" class="tab-content active">
                     <div class="card">
+                        <h3>易於查找的線上佛學知識庫</h3>
                         <h4>建立新時代的《大藏經》數位典藏</h4>
                         <p><strong>解決的問題：</strong>佛學資訊散落各處，缺乏統一的高品質知識庫</p>
                         <p><strong>我們的解決方案：</strong>建立經過嚴格認證的開放式佛學知識庫，包含經典原文、現代註解、多語言翻譯和相關研究資料</p>
