--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                 <div id="knowledge" class="tab-content active">
                     <div class="card">
                         <h3>易於查找的線上佛學資料庫</h3>
-                        <p><strong>解決的問題：</strong>佛學資訊散落各處，缺乏統一的高品質資料庫</p>
+                        <p><strong>當前的挑戰：</strong>佛學資訊散落各處，缺乏統一的高品質資料庫</p>
                         <p><strong>我們的解決方案：</strong>建立經過嚴格認證的開放式佛學資料庫，包含經典原文、現代註解、多語言翻譯和相關研究資料</p>
                         <p><strong>核心特色：</strong></p>
                         <ul>
@@ -659,7 +659,7 @@
                     <div class="card">
                         <h3>佛典研讀平台</h3>
                         <h4>為法友打造的專業佛學研究工具</h4>
-                        <p><strong>解決的問題：</strong>缺乏整合性的數位佛學研究環境</p>
+                        <p><strong>當前的挑戰：</strong>缺乏整合性的數位佛學研究環境</p>
                         <p><strong>我們的解決方案：</strong>建立功能完整的線上佛典研讀平台，支援深度佛學研究和學習</p>
                         <p><strong>核心特色：</strong></p>
                         <ul>
@@ -675,7 +675,7 @@
                     <div class="card">
                         <h3>佛典修學應用</h3>
                         <h4>融入日常生活的修行輔助工具</h4>
-                        <p><strong>解決的問題：</strong>佛法理論與日常修行實踐的脫節</p>
+                        <p><strong>當前的挑戰：</strong>佛法理論與日常修行實踐的脫節</p>
                         <p><strong>我們的解決方案：</strong>開發便民的佛法修學應用程式，幫助法友將佛法智慧融入日常生活</p>
                         <p><strong>核心特色：</strong></p>
                         <ul>
