Update knowledge database description - emphasize searchability and AI-expert collaboration

--- a/index.html
+++ b/index.html
@@ -643,8 +643,8 @@
                 <div id="knowledge" class="tab-content active">
                     <div class="card">
                         <h3>易於查找的線上佛學資料庫</h3>
-                        <p><strong>當前的挑戰：</strong>佛學資訊散落各處，缺乏統一的高品質資料庫</p>
-                        <p><strong>我們的解決方案：</strong>建立經過嚴格認證的開放式佛學資料庫，包含經典原文、現代註解、多語言翻譯和相關研究資料</p>
+                        <p><strong>當前的挑戰：</strong>佛學資訊散落各處，缺乏高品質又易於查找的資料庫</p>
+                        <p><strong>我們的解決方案：</strong>建立線上佛學資料庫，其中包含了經過專家與AI協作審查的佛典引文、現代註解、多語言翻譯和相關研究資料</p>
                         <p><strong>核心特色：</strong></p>
                         <ul>
                             <li>多位法師和學者共同審核的認證機制</li>
