--- a/index.html
+++ b/index.html
@@ -647,10 +647,10 @@
                         <p><strong>我們的解決方案：</strong>建立線上佛學資料庫，其中包含了經過專家與AI協作審查的佛典引文、現代註解、多語言翻譯和相關研究資料</p>
                         <p><strong>核心特色：</strong></p>
                         <ul>
-                            <li>多位法師和學者共同審核的認證機制</li>
-                            <li>結構化數據，便於AI理解和人工查詢</li>
-                            <li>開放授權，促進佛法普及</li>
-                            <li>持續更新，反映最新研究成果</li>
+                            <li>由高僧大德與佛教學者共同審核資料庫中的佛學內容</li>
+                            <li>結構化的資訊數據，便於AI理解，也易於使用者查詢</li>
+                            <li>資料完全開源，以利於他人廣泛運用，進而促進佛法普及</li>
+                            <li>線上同步更新，以反映最新的研究與審核成果</li>
                         </ul>
                     </div>
                 </div>
