易於深入學習的佛典研讀平台

--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 
                 <div id="study" class="tab-content">
                     <div class="card">
-                        <h3>佛典研讀平台</h3>
+                        <h3>易於深入學習的線上佛典研讀平台</h3>
                         <h4>為法友打造的專業佛學研究工具</h4>
                         <p><strong>當前的挑戰：</strong>缺乏整合性的數位佛學研究環境</p>
                         <p><strong>我們的解決方案：</strong>建立功能完整的線上佛典研讀平台，支援深度佛學研究和學習</p>
