edit 線上佛典研讀平台 content

--- a/index.html
+++ b/index.html
@@ -658,15 +658,15 @@
                 <div id="study" class="tab-content">
                     <div class="card">
                         <h3>易於深入學習的線上佛典研讀平台</h3>
-                        <h4>為法友打造的專業佛學研究工具</h4>
-                        <p><strong>當前的挑戰：</strong>缺乏整合性的數位佛學研究環境</p>
-                        <p><strong>我們的解決方案：</strong>建立功能完整的線上佛典研讀平台，支援深度佛學研究和學習</p>
+                        <p><strong>當前的挑戰：</strong>缺乏整合性的數位佛典學習工具</p>
+                        <p><strong>我們的解決方案：</strong>以法友需求為中心，建立功能完整的線上佛典研讀平台，不僅能進行各種深度探索，也能與師長及法友共同交流研討。</p>
                         <p><strong>核心特色：</strong></p>
                         <ul>
-                            <li>經典對照閱讀和註解查詢</li>
-                            <li>智能搜索和主題分類</li>
-                            <li>個人筆記和共修討論功能</li>
-                            <li>多媒體教學資源整合</li>
+                            <li>佛典雙語對照閱讀</li>
+                            <li>文本註解查詢</li>
+                            <li>AI搜索與生活主題分類</li>
+                            <li>個人筆記與研討功能</li>
+                            <li>師長多媒體教學資源整合</li>
                         </ul>
                     </div>
                 </div>
