move the bullet points right below 核心特色

--- a/index.html
+++ b/index.html
@@ -477,6 +477,15 @@
             
 
         }
+        /* Custom list styling for core features alignment */
+        .card ul {
+            margin-left: 2em; /* Align bullets with the "核" character */
+            padding-left: 0;
+        }
+        
+        .card li {
+            margin-bottom: 0.5rem;
+        }
     </style>
 </head>
 <body>
