increase line-height

--- a/index.html
+++ b/index.html
@@ -485,6 +485,12 @@
         
         .card li {
             margin-bottom: 0.5rem;
+            line-height: 2.2; /* Increase line spacing for better readability */
+        }
+        
+        /* Increase line spacing for all text in project cards */
+        .tab-content .card p {
+            line-height: 2.2;
         }
     </style>
 </head>
