佛法理論與日常修行實踐的脫節

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                     <div class="card">
                         <h3>佛典修學應用</h3>
                         <h4>融入日常生活的修行輔助工具</h4>
-                        <p><strong>當前的挑戰：</strong>佛法理論與日常修行實踐的脫節</p>
+                        <p><strong>當前的挑戰：</strong>佛學理論與日常生活難以結合</p>
                         <p><strong>我們的解決方案：</strong>開發便民的佛法修學應用程式，幫助法友將佛法智慧融入日常生活</p>
                         <p><strong>核心特色：</strong></p>
                         <ul>
