edit the texts in the 共修平台

--- a/index.html
+++ b/index.html
@@ -691,13 +691,13 @@
                         <h3>佛典修學應用</h3>
                         <h4>融入日常生活的修行輔助工具</h4>
                         <p><strong>當前的挑戰：</strong>佛學理論與日常生活難以結合</p>
-                        <p><strong>我們的解決方案：</strong>開發便民的佛法修學應用程式，幫助法友將佛法智慧融入日常生活</p>
+                        <p><strong>我們的解決方案：</strong>開發能幫助法友們將佛法智慧融入日常生活的APP應用程式</p>
                         <p><strong>核心特色：</strong></p>
                         <ul>
                             <li>每日法語和經典選讀</li>
-                            <li>個人化修行進度追蹤</li>
-                            <li>禪修和念佛輔助功能</li>
-                            <li>法友交流和共修平台</li>
+                            <li>個人修行進度追蹤</li>
+                            <li>禪修與念佛引導</li>
+                            <li>法友交流共修平台</li>
                         </ul>
                     </div>
                 </div>
