edit content of 佛學資料庫

--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                             </svg>
                         </div>
                         <h3>解決方案</h3>
-                        <p>建立經過認證的開源佛學知識庫，結合傳統佛學素養與現代科技，創造可信賴的佛法學習平台。透過嚴謹的學術驗證和技術創新，確保佛法正確傳承。</p>
+                        <p>與法友們共同建立開放流通的佛學資料庫，提供AI可信賴的語料、創造可信賴的佛法學習平台，結合有溫度的傳承、嚴謹的學術研究與最新的AI技術，讓正法能因應時代變化，隨順因緣，教化眾生。</p>
                     </div>
                     
                     <div class="card">
@@ -635,8 +635,8 @@
                                       stroke="url(#certGradient)" stroke-width="1.5" stroke-linecap="round" opacity="0.7"/>
                             </svg>
                         </div>
-                        <h3>來源審核機制</h3>
-                        <p>我們的核心使命是建立「來源審核」機制——透過不同的工具平台，邀請各傳承的高僧大德資深學者與專家，協助審核每一項佛學內容，確保其準確性和權威性，為AI時代的佛法傳承奠定堅實基礎。</p>
+                        <h3>品質審核機制</h3>
+                        <p>我們的核心使命是建立「品質審核」機制——透過不同的工具平台，邀請各傳承的高僧大德資深學者與專家，協助審核每一項佛學內容，確保其準確性與權威性，為AI時代的佛法傳承奠定堅實基礎。</p>
                     </div>
                 </div>
             </div>
@@ -652,7 +652,7 @@
                 <div class="tabs">
                     <button class="tab active" onclick="showTab('knowledge')">佛學資料庫</button>
                     <button class="tab" onclick="showTab('study')">研讀平台</button>
-                    <button class="tab" onclick="showTab('practice')">修學應用</button>
+                    <button class="tab" onclick="showTab('practice')">生活應用</button>
                 </div>
 
                 <div id="knowledge" class="tab-content active">
@@ -662,7 +662,9 @@
                         <p><strong>我們的解決方案：</strong>建立線上佛學資料庫，其中包含了經過專家與AI協作審查的佛典引文、現代註解、多語言翻譯和相關研究資料</p>
                         <p><strong>核心特色：</strong></p>
                         <ul>
+                            <li>結合眾人之力，將所有現存的佛典資料，都放上開源的維基百科與維基文本</li>
                             <li>由高僧大德與佛教學者共同審核資料庫中的佛學內容</li>
+                            <li>資料庫的內容包含佛法名相解釋、法義解說、來源連結等等</li>
                             <li>結構化的資訊數據，便於AI理解，也易於使用者查詢</li>
                             <li>資料完全開源，以利於他人廣泛運用，進而促進佛法普及</li>
                             <li>線上同步更新，以反映最新的研究與審核成果</li>
@@ -688,7 +690,7 @@
 
                 <div id="practice" class="tab-content">
                     <div class="card">
-                        <h3>佛典修學應用</h3>
+                        <h3>生活中的修行</h3>
                         <h4>融入日常生活的修行輔助工具</h4>
                         <p><strong>當前的挑戰：</strong>佛學理論與日常生活難以結合</p>
                         <p><strong>我們的解決方案：</strong>開發能幫助法友們將佛法智慧融入日常生活的APP應用程式</p>
