--- a/index.html
+++ b/index.html
@@ -784,8 +784,11 @@
                 
                 <div class="card" style="margin-bottom: 3rem;">
                     <h3>我們的願景</h3>
-                    <p>「因陀羅網」來自《華嚴經》中的重要概念，象徵著宇宙中一切事物的相互連結和無限反映。正如因陀羅網上的每一顆寶珠都映照著其他所有寶珠，我們相信佛法的智慧應該能夠在數位時代中相互連結、相互輝映，讓每一位求法者都能從中受益。</p>
-                    <p>我們是一群關心佛法未來傳承的法友，深感在AI快速發展的時代，必須主動出擊，確保佛法的正確傳承和普及。透過結合傳統佛學智慧與現代科技，我們致力於創造一個值得信賴的佛法學習環境。</p>
+                    <p>「因陀羅網」的概念來自《華嚴經》，象徵著宇宙中一切事物的相互連結與映射。</p>
+                    <p>正如因陀羅網上的每一顆寶珠都映照著所有其他寶珠，我們相信佛法的智慧也能在數位時代中，相互連結、相互輝映，讓每一位求法者都能從中受益。</p>
+                    <p>我們是一群關心佛法未來傳承的法友，深感在AI快速發展的時代，必須主動出擊，以確保佛法的正確傳承和普及。</p>
+                    <p>我們希望結合傳統佛學智慧與現代科技，創造一個值得信賴的佛法學習環境。</p>
+                    <p>歡迎您加入我們的行列。</p>
                 </div>
 
                 <div class="stats">
