move the injrajala org to the botton

--- a/index.html
+++ b/index.html
@@ -562,16 +562,6 @@
                     </div>
                 </div>
 
-                <div class="card">
-                    <h3>因陀羅華基金會為在台灣正式註冊的非營利組織</h3>
-                    <p style="text-align: center; font-size: 1.1rem; font-weight: 600;">
-                        因陀羅網基金會為在台灣正式註冊的非營利組織
-                    </p>
-                    <p style="text-align: center; margin-top: 1rem;">
-                        我們承諾所有資金將完全用於佛法弘揚和知識保存事業，
-                        定期公開財務報告，接受各界監督。
-                    </p>
-                </div>
             </div>
         </section>
 
@@ -820,6 +810,21 @@
         </section>
 
 
+        <!-- 基金會資訊 -->
+        <section style="padding: 2rem 0; background-color: #f8f9fa;">
+            <div class="container">
+                <div class="card">
+                    <h3>因陀羅華基金會為在台灣正式註冊的非營利組織</h3>
+                    <p style="text-align: center; font-size: 1.1rem; font-weight: 600;">
+                        因陀羅網基金會為在台灣正式註冊的非營利組織
+                    </p>
+                    <p style="text-align: center; margin-top: 1rem;">
+                        我們承諾所有資金將完全用於佛法弘揚和知識保存事業，
+                        定期公開財務報告，接受各界監督。
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
